--- a/css/donate.css
+++ b/css/donate.css
@@ -1,7 +1,7 @@
 .version.donate /* version checker */
 {
-	color: #000015;
-	background-color: #C9E4DF;
+	color: #0000F3;
+	background-color: #22B8C8;
 }
 
 #muse_css_mq
@@ -443,12 +443,12 @@
 
 #u1225-23
 {
-	z-index: 69;
+	z-index: 71;
 	width: 782px;
 	min-height: 323px;
 	background-color: transparent;
-	font-size: 16px;
 	line-height: 19px;
+	font-size: 16px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -473,7 +473,7 @@
 
 #u1235
 {
-	z-index: 92;
+	z-index: 94;
 	width: 118px;
 	min-height: 33px;
 	border-width: 0px;
@@ -541,11 +541,12 @@
 	padding-left: 80px;
 	padding-top: 30px;
 	padding-bottom: 3px;
+	margin-bottom: -13px;
 	position: relative;
 	margin-right: -10000px;
 }
 
-#u3252-6
+#u3252-8
 {
 	z-index: 58;
 	width: 782px;
@@ -553,7 +554,7 @@
 	position: relative;
 }
 
-#u3252-6:hover
+#u3252-8:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -564,7 +565,7 @@
 
 #u5246-4
 {
-	z-index: 65;
+	z-index: 67;
 	width: 104px;
 	min-height: 19px;
 	margin-left: 758px;
@@ -583,7 +584,7 @@
 
 #u4305
 {
-	z-index: 64;
+	z-index: 66;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
