--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #00001D;
-	background-color: #ED7A33;
+	color: #000003;
+	background-color: #3259FE;
 }
 
 #muse_css_mq
@@ -20,6 +20,12 @@
 	background-color: #333333;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+#page_position_content
+{
+	margin-bottom: -13px;
+	width: 0.01px;/* should not cover content below */
 }
 
 #u3090
@@ -434,7 +440,7 @@
 
 #u1760-5
 {
-	z-index: 69;
+	z-index: 71;
 	width: 782px;
 	min-height: 26px;
 	background-color: transparent;
@@ -457,7 +463,7 @@
 
 #u3841-9
 {
-	z-index: 77;
+	z-index: 79;
 	width: 782px;
 	min-height: 70px;
 	background-color: transparent;
@@ -514,7 +520,7 @@
 
 #u3750
 {
-	z-index: 76;
+	z-index: 78;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -542,7 +548,7 @@
 
 #u4546-4
 {
-	z-index: 101;
+	z-index: 103;
 	width: 239px;
 	min-height: 151px;
 	background-color: transparent;
@@ -574,7 +580,7 @@
 
 #u3749
 {
-	z-index: 75;
+	z-index: 77;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -601,7 +607,7 @@
 
 #u4549-4
 {
-	z-index: 105;
+	z-index: 107;
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
@@ -618,7 +624,7 @@
 
 #u4349
 {
-	z-index: 99;
+	z-index: 101;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -645,7 +651,7 @@
 
 #u4552-4
 {
-	z-index: 109;
+	z-index: 111;
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
@@ -670,7 +676,7 @@
 
 #u3748
 {
-	z-index: 74;
+	z-index: 76;
 	width: 244px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -707,7 +713,7 @@
 
 #u4555-4
 {
-	z-index: 113;
+	z-index: 115;
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
@@ -762,7 +768,7 @@
 
 #u4522
 {
-	z-index: 100;
+	z-index: 102;
 	width: 68px;
 	min-height: 51px;
 	border-width: 0px;
@@ -795,12 +801,12 @@
 
 #u3844-4
 {
-	z-index: 86;
+	z-index: 88;
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	color: #E792C4;
 	line-height: 30px;
+	color: #E792C4;
 	text-align: center;
 	font-size: 25px;
 	font-family: bitter, serif;
@@ -818,7 +824,7 @@
 
 #u5379-4
 {
-	z-index: 182;
+	z-index: 184;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -854,7 +860,7 @@
 
 #u5371-4
 {
-	z-index: 178;
+	z-index: 180;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -891,7 +897,7 @@
 
 #u5363-4
 {
-	z-index: 174;
+	z-index: 176;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -935,7 +941,7 @@
 
 #u5355-4
 {
-	z-index: 170;
+	z-index: 172;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -970,7 +976,7 @@
 
 #u5347-4
 {
-	z-index: 166;
+	z-index: 168;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1008,7 +1014,7 @@
 
 #u5339-4
 {
-	z-index: 162;
+	z-index: 164;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1044,7 +1050,7 @@
 
 #u5318-4
 {
-	z-index: 158;
+	z-index: 160;
 	width: 244px;
 	min-height: 154px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
@@ -1095,8 +1101,8 @@
 {
 	color: #FFFFFF;
 	visibility: inherit;
-	padding-top: 62px;
 	font-size: 19px;
+	padding-top: 62px;
 }
 
 #u5347-2,#u5318-2
@@ -1107,12 +1113,12 @@
 
 #u5168-4
 {
-	z-index: 125;
+	z-index: 127;
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	color: #E792C4;
 	line-height: 30px;
+	color: #E792C4;
 	text-align: center;
 	font-size: 25px;
 	font-family: bitter, serif;
@@ -1131,7 +1137,7 @@
 
 #u5167
 {
-	z-index: 124;
+	z-index: 126;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1159,7 +1165,7 @@
 
 #u5169-4
 {
-	z-index: 129;
+	z-index: 131;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1180,7 +1186,7 @@
 
 #u5170
 {
-	z-index: 133;
+	z-index: 135;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1208,7 +1214,7 @@
 
 #u5171-4
 {
-	z-index: 134;
+	z-index: 136;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1229,7 +1235,7 @@
 
 #u5172
 {
-	z-index: 138;
+	z-index: 140;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1257,7 +1263,7 @@
 
 #u5173-4
 {
-	z-index: 139;
+	z-index: 141;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1285,7 +1291,7 @@
 
 #u5204
 {
-	z-index: 143;
+	z-index: 145;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1313,7 +1319,7 @@
 
 #u5205-4
 {
-	z-index: 144;
+	z-index: 146;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1334,7 +1340,7 @@
 
 #u5210
 {
-	z-index: 148;
+	z-index: 150;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1362,7 +1368,7 @@
 
 #u5211-4
 {
-	z-index: 149;
+	z-index: 151;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1383,7 +1389,7 @@
 
 #u5216
 {
-	z-index: 153;
+	z-index: 155;
 	width: 231px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1423,7 +1429,7 @@
 
 #u5217-4
 {
-	z-index: 154;
+	z-index: 156;
 	width: 238px;
 	min-height: 238px;
 	border-style: solid;
@@ -1455,8 +1461,8 @@
 {
 	color: #FFFFFF;
 	visibility: inherit;
-	padding-top: 105px;
 	font-size: 19px;
+	padding-top: 105px;
 }
 
 #u5169-2,#u5171-2,#u5173-2,#u5205-2,#u5211-2,#u5217-2
@@ -1467,12 +1473,12 @@
 
 #u4276-4
 {
-	z-index: 90;
+	z-index: 92;
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	color: #E792C4;
 	line-height: 30px;
+	color: #E792C4;
 	text-align: center;
 	font-size: 25px;
 	font-family: bitter, serif;
@@ -1484,7 +1490,7 @@
 
 #u4277
 {
-	z-index: 94;
+	z-index: 96;
 	width: 245px;
 	-pie-box-shadow: 6px 6px 8px #7F7F7F;
 	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
@@ -1521,7 +1527,7 @@
 
 #u4570-4
 {
-	z-index: 117;
+	z-index: 119;
 	width: 241px;
 	min-height: 158px;
 	background-color: transparent;
@@ -1549,8 +1555,8 @@
 {
 	color: #FFFFFF;
 	visibility: inherit;
-	padding-top: 80px;
 	font-size: 19px;
+	padding-top: 80px;
 }
 
 #u4549-2,#u4552-2,#u4555-2,#u5379-2,#u5371-2,#u5363-2,#u5355-2,#u5339-2,#u4570-2
@@ -1561,12 +1567,12 @@
 
 #u4278-4
 {
-	z-index: 95;
+	z-index: 97;
 	width: 245px;
 	min-height: 23px;
 	background-color: #FFFFFF;
-	color: #9E9E9E;
 	line-height: 22px;
+	color: #9E9E9E;
 	text-align: center;
 	font-size: 18px;
 	font-family: bitter, serif;
@@ -1577,12 +1583,12 @@
 
 #u5106-3
 {
-	z-index: 121;
+	z-index: 123;
 	width: 782px;
 	min-height: 24px;
 	background-color: transparent;
-	color: #000000;
 	line-height: 24px;
+	color: #000000;
 	text-align: left;
 	font-size: 20px;
 	font-family: bitter, serif;
@@ -1592,9 +1598,9 @@
 	position: relative;
 }
 
-#page_position_content,#pu3750,#pu4273-4,#pu3093
+#pu3750,#pu4273-4,#pu3093
 {
-	width: 0.01px;/* should not cover content below */
+	width: 0.01px;
 }
 
 #u3093
@@ -1608,7 +1614,7 @@
 	margin-right: -10000px;
 }
 
-#u3252-6
+#u3252-8
 {
 	z-index: 58;
 	width: 782px;
@@ -1616,7 +1622,7 @@
 	position: relative;
 }
 
-#u3252-6:hover
+#u3252-8:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -1627,7 +1633,7 @@
 
 #u5246-4
 {
-	z-index: 65;
+	z-index: 67;
 	width: 104px;
 	min-height: 19px;
 	margin-left: 758px;
@@ -1646,7 +1652,7 @@
 
 #u4305
 {
-	z-index: 64;
+	z-index: 66;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
