--- a/css/privacy-policy.css
+++ b/css/privacy-policy.css
@@ -1,7 +1,7 @@
 .version.privacy_policy /* version checker */
 {
-	color: #0000F6;
-	background-color: #1D09DB;
+	color: #0000F2;
+	background-color: #8C061D;
 }
 
 #muse_css_mq
@@ -443,14 +443,14 @@
 
 #u1251-4
 {
-	z-index: 132;
+	z-index: 134;
 	width: 216px;
 	min-height: 34px;
 	background-color: transparent;
+	line-height: 36px;
 	color: #E792C4;
 	text-align: center;
 	font-size: 30px;
-	line-height: 36px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -460,7 +460,7 @@
 
 #u1252
 {
-	z-index: 136;
+	z-index: 138;
 	width: 782px;
 	height: 16px;
 	border-style: solid;
@@ -475,7 +475,7 @@
 
 #u1250-63
 {
-	z-index: 69;
+	z-index: 71;
 	width: 782px;
 	min-height: 834px;
 	background-color: transparent;
@@ -568,11 +568,12 @@
 	padding-left: 80px;
 	padding-top: 30px;
 	padding-bottom: 3px;
+	margin-bottom: -13px;
 	position: relative;
 	margin-right: -10000px;
 }
 
-#u3252-6
+#u3252-8
 {
 	z-index: 58;
 	width: 782px;
@@ -580,7 +581,7 @@
 	position: relative;
 }
 
-#u3252-6:hover
+#u3252-8:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -591,7 +592,7 @@
 
 #u5246-4
 {
-	z-index: 65;
+	z-index: 67;
 	width: 104px;
 	min-height: 19px;
 	margin-left: 758px;
@@ -610,7 +611,7 @@
 
 #u4305
 {
-	z-index: 64;
+	z-index: 66;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
