--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 .version.resume /* version checker */
 {
-	color: #000007;
-	background-color: #C8359B;
+	color: #0000E4;
+	background-color: #D6F4B4;
 }
 
 #muse_css_mq
@@ -429,12 +429,12 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#ppu1253-125
+#ppu1253-121
 {
 	width: 0.01px;
 }
 
-#pu1253-125
+#pu1253-121
 {
 	width: 0.01px;
 	margin-right: -10000px;
@@ -442,9 +442,9 @@
 	margin-left: 130px;
 }
 
-#u1253-125
+#u1253-121
 {
-	z-index: 69;
+	z-index: 71;
 	width: 782px;
 	min-height: 539px;
 	background-color: transparent;
@@ -565,7 +565,7 @@
 	font-weight: 400;
 }
 
-#u1253-43,#u1253-45,#u1253-47,#u1253-49,#u1253-51,#u1253-53,#u1253-55,#u1253-57,#u1253-59,#u1253-61,#u1253-63,#u1253-65
+#u1253-43,#u1253-45,#u1253-47,#u1253-49,#u1253-51,#u1253-53,#u1253-55,#u1253-57,#u1253-59,#u1253-61
 {
 	font-size: 16px;
 	text-align: left;
@@ -575,20 +575,20 @@
 	font-weight: 400;
 }
 
-#u1253-66 > #u1253-43:before,#u1253-66 > #u1253-45:before,#u1253-66 > #u1253-47:before,#u1253-66 > #u1253-49:before,#u1253-66 > #u1253-51:before,#u1253-66 > #u1253-53:before,#u1253-66 > #u1253-55:before,#u1253-66 > #u1253-57:before,#u1253-66 > #u1253-59:before,#u1253-66 > #u1253-61:before,#u1253-66 > #u1253-63:before,#u1253-66 > #u1253-65:before
+#u1253-62 > #u1253-43:before,#u1253-62 > #u1253-45:before,#u1253-62 > #u1253-47:before,#u1253-62 > #u1253-49:before,#u1253-62 > #u1253-51:before,#u1253-62 > #u1253-53:before,#u1253-62 > #u1253-55:before,#u1253-62 > #u1253-57:before,#u1253-62 > #u1253-59:before,#u1253-62 > #u1253-61:before
 {
 	font-family: bitter, Georgia;
 	font-weight: 400;
 	margin-right: -39px;
 }
 
-#u1253-66.rtl-list > #u1253-43:before,#u1253-66.rtl-list > #u1253-45:before,#u1253-66.rtl-list > #u1253-47:before,#u1253-66.rtl-list > #u1253-49:before,#u1253-66.rtl-list > #u1253-51:before,#u1253-66.rtl-list > #u1253-53:before,#u1253-66.rtl-list > #u1253-55:before,#u1253-66.rtl-list > #u1253-57:before,#u1253-66.rtl-list > #u1253-59:before,#u1253-66.rtl-list > #u1253-61:before,#u1253-66.rtl-list > #u1253-63:before,#u1253-66.rtl-list > #u1253-65:before
+#u1253-62.rtl-list > #u1253-43:before,#u1253-62.rtl-list > #u1253-45:before,#u1253-62.rtl-list > #u1253-47:before,#u1253-62.rtl-list > #u1253-49:before,#u1253-62.rtl-list > #u1253-51:before,#u1253-62.rtl-list > #u1253-53:before,#u1253-62.rtl-list > #u1253-55:before,#u1253-62.rtl-list > #u1253-57:before,#u1253-62.rtl-list > #u1253-59:before,#u1253-62.rtl-list > #u1253-61:before
 {
 	margin-right: 0px;
 	margin-left: -39px;
 }
 
-#u1253-16,#u1253-26,#u1253-67
+#u1253-16,#u1253-26,#u1253-63
 {
 	font-size: 16px;
 	text-align: left;
@@ -597,7 +597,7 @@
 	font-weight: 400;
 }
 
-#u1253-70
+#u1253-66
 {
 	font-size: 16px;
 	text-align: left;
@@ -607,7 +607,7 @@
 	font-weight: 400;
 }
 
-#u1253-72,#u1253-82,#u1253-102
+#u1253-68,#u1253-78,#u1253-98
 {
 	font-size: 16px;
 	text-align: left;
@@ -617,14 +617,14 @@
 	font-weight: 400;
 }
 
-#u1253-79 > #u1253-74:before,#u1253-79 > #u1253-76:before,#u1253-79 > #u1253-78:before,#u1253-99 > #u1253-84:before,#u1253-99 > #u1253-86:before,#u1253-99 > #u1253-88:before,#u1253-99 > #u1253-90:before,#u1253-99 > #u1253-92:before,#u1253-99 > #u1253-94:before,#u1253-99 > #u1253-96:before,#u1253-99 > #u1253-98:before,#u1253-107 > #u1253-104:before,#u1253-107 > #u1253-106:before
+#u1253-75 > #u1253-70:before,#u1253-75 > #u1253-72:before,#u1253-75 > #u1253-74:before,#u1253-95 > #u1253-80:before,#u1253-95 > #u1253-82:before,#u1253-95 > #u1253-84:before,#u1253-95 > #u1253-86:before,#u1253-95 > #u1253-88:before,#u1253-95 > #u1253-90:before,#u1253-95 > #u1253-92:before,#u1253-95 > #u1253-94:before,#u1253-103 > #u1253-100:before,#u1253-103 > #u1253-102:before
 {
 	font-family: bitter, Georgia;
 	font-weight: 400;
 	margin-right: -44px;
 }
 
-#u1253-74,#u1253-76,#u1253-78,#u1253-80,#u1253-84,#u1253-86,#u1253-88,#u1253-90,#u1253-92,#u1253-94,#u1253-96,#u1253-98,#u1253-100,#u1253-104,#u1253-106,#u1253-108
+#u1253-70,#u1253-72,#u1253-74,#u1253-76,#u1253-80,#u1253-82,#u1253-84,#u1253-86,#u1253-88,#u1253-90,#u1253-92,#u1253-94,#u1253-96,#u1253-100,#u1253-102,#u1253-104
 {
 	font-size: 16px;
 	text-align: left;
@@ -634,12 +634,12 @@
 	font-weight: 400;
 }
 
-#u1253-118 > li:before
+#u1253-114 > li:before
 {
 	color: #FFFFFF;
 }
 
-#u1253-113,#u1253-115,#u1253-117
+#u1253-109,#u1253-111,#u1253-113
 {
 	font-size: 25px;
 	text-align: left;
@@ -649,7 +649,7 @@
 	line-height: 0px;/* 0 for mixed font sized paras; applied on spans instead */
 }
 
-#u1253-118 > #u1253-113:before,#u1253-118 > #u1253-115:before,#u1253-118 > #u1253-117:before
+#u1253-114 > #u1253-109:before,#u1253-114 > #u1253-111:before,#u1253-114 > #u1253-113:before
 {
 	font-size: 16px;
 	font-family: bitter, Georgia;
@@ -658,19 +658,19 @@
 	line-height: 1.2;
 }
 
-#u1253-79.rtl-list > #u1253-74:before,#u1253-79.rtl-list > #u1253-76:before,#u1253-79.rtl-list > #u1253-78:before,#u1253-99.rtl-list > #u1253-84:before,#u1253-99.rtl-list > #u1253-86:before,#u1253-99.rtl-list > #u1253-88:before,#u1253-99.rtl-list > #u1253-90:before,#u1253-99.rtl-list > #u1253-92:before,#u1253-99.rtl-list > #u1253-94:before,#u1253-99.rtl-list > #u1253-96:before,#u1253-99.rtl-list > #u1253-98:before,#u1253-107.rtl-list > #u1253-104:before,#u1253-107.rtl-list > #u1253-106:before,#u1253-118.rtl-list > #u1253-113:before,#u1253-118.rtl-list > #u1253-115:before,#u1253-118.rtl-list > #u1253-117:before
+#u1253-75.rtl-list > #u1253-70:before,#u1253-75.rtl-list > #u1253-72:before,#u1253-75.rtl-list > #u1253-74:before,#u1253-95.rtl-list > #u1253-80:before,#u1253-95.rtl-list > #u1253-82:before,#u1253-95.rtl-list > #u1253-84:before,#u1253-95.rtl-list > #u1253-86:before,#u1253-95.rtl-list > #u1253-88:before,#u1253-95.rtl-list > #u1253-90:before,#u1253-95.rtl-list > #u1253-92:before,#u1253-95.rtl-list > #u1253-94:before,#u1253-103.rtl-list > #u1253-100:before,#u1253-103.rtl-list > #u1253-102:before,#u1253-114.rtl-list > #u1253-109:before,#u1253-114.rtl-list > #u1253-111:before,#u1253-114.rtl-list > #u1253-113:before
 {
 	margin-right: 0px;
 	margin-left: -44px;
 }
 
-#u1253-11,#u1253-112,#u1253-114,#u1253-116
+#u1253-11,#u1253-108,#u1253-110,#u1253-112
 {
 	font-size: 16px;
 	line-height: 19px;
 }
 
-#u1253-119
+#u1253-115
 {
 	font-size: 25px;
 	text-align: left;
@@ -679,7 +679,7 @@
 	font-weight: 400;
 }
 
-#u1253-9,#u1253-15,#u1253-28,#u1253-40,#u1253-69,#u1253-110,#u1253-111,#u1253-121
+#u1253-9,#u1253-15,#u1253-28,#u1253-40,#u1253-65,#u1253-106,#u1253-107,#u1253-117
 {
 	font-size: 25px;
 	text-align: left;
@@ -688,7 +688,7 @@
 	font-weight: 400;
 }
 
-#u1253-7,#u1253-122
+#u1253-7,#u1253-118
 {
 	font-size: 25px;
 	text-align: left;
@@ -697,7 +697,7 @@
 	font-weight: 400;
 }
 
-#u1253-123
+#u1253-119
 {
 	font-size: 20px;
 	text-align: left;
@@ -708,12 +708,12 @@
 
 #slideshowu4628
 {
-	z-index: 194;
+	z-index: 192;
 	width: 0.01px;
 	height: 284px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 1384px;
+	margin-top: 1343px;
 }
 
 #u4651
@@ -732,12 +732,12 @@
 
 #u4651popup
 {
-	z-index: 195;
+	z-index: 193;
 }
 
 #u4652
 {
-	z-index: 196;
+	z-index: 194;
 	width: 1140px;
 	height: 755px;
 	background-color: transparent;
@@ -765,12 +765,12 @@
 
 #u4631popup
 {
-	z-index: 198;
+	z-index: 196;
 }
 
 #u4638
 {
-	z-index: 199;
+	z-index: 197;
 	width: 177px;
 	height: 251px;
 	border-width: 0px;
@@ -796,9 +796,9 @@
 	width: 30px;
 	min-height: 30px;
 	background-color: transparent;
-	color: #FFFFFF;
-	text-align: center;
 	line-height: 20px;
+	text-align: center;
+	color: #FFFFFF;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	top: 170px;
 	left: -45px;
@@ -806,7 +806,7 @@
 
 #u4650-4popup
 {
-	z-index: 201;
+	z-index: 199;
 }
 
 #u4663-4
@@ -815,9 +815,9 @@
 	width: 30px;
 	min-height: 30px;
 	background-color: transparent;
-	color: #FFFFFF;
-	text-align: center;
 	line-height: 20px;
+	text-align: center;
+	color: #FFFFFF;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	top: 170px;
 	left: 1160px;
@@ -825,7 +825,7 @@
 
 #u4663-4popup
 {
-	z-index: 205;
+	z-index: 203;
 }
 
 #u4642
@@ -858,15 +858,15 @@
 
 #u4643-4
 {
-	z-index: 210;
+	z-index: 208;
 	width: 20px;
 	min-height: 20px;
 	border-width: 0px;
 	border-color: transparent;
 	background-color: transparent;
-	color: #FFFFFF;
-	text-align: center;
 	line-height: 20px;
+	text-align: center;
+	color: #FFFFFF;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -940,11 +940,12 @@
 	padding-left: 80px;
 	padding-top: 30px;
 	padding-bottom: 3px;
+	margin-bottom: -13px;
 	position: relative;
 	margin-right: -10000px;
 }
 
-#u3252-6
+#u3252-8
 {
 	z-index: 58;
 	width: 782px;
@@ -952,7 +953,7 @@
 	position: relative;
 }
 
-#u3252-6:hover
+#u3252-8:hover
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -963,7 +964,7 @@
 
 #u5246-4
 {
-	z-index: 65;
+	z-index: 67;
 	width: 104px;
 	min-height: 19px;
 	margin-left: 758px;
@@ -982,7 +983,7 @@
 
 #u4305
 {
-	z-index: 64;
+	z-index: 66;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
