--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
-	color: #0000FE;
-	background-color: #B17F69;
+	color: #0000EF;
+	background-color: #3B3AB2;
 }
 
 #muse_css_mq
@@ -805,8 +805,8 @@
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	line-height: 30px;
 	color: #E792C4;
+	line-height: 30px;
 	text-align: center;
 	font-size: 25px;
 	font-family: bitter, serif;
@@ -1128,7 +1128,45 @@
 	background-size: cover;
 }
 
-#u5379-4:hover::before,#u5371-4:hover::before,#u5363-4:hover::before,#u5355-4:hover::before,#u5347-4:hover::before,#u5339-4:hover::before,#u5318-4:hover::before,#u5387-4:hover::before
+#u5398-4
+{
+	z-index: 192;
+	width: 244px;
+	min-height: 154px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
+	line-height: 20px;
+	text-align: center;
+	font-size: 17px;
+	font-family: bitter, serif;
+	font-weight: 400;
+	margin-bottom: -1px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 1px;
+	left: 538px;
+	background: #7F7F7F url("../images/we-are-different-v2.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#u5398-4:hover
+{
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	background-repeat: no-repeat;
+	background-position: center center;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 154px;
+	width: 244px;
+	margin: 1px -10000px -1px 0px;
+	background-size: cover;
+}
+
+#u5379-4:hover::before,#u5371-4:hover::before,#u5363-4:hover::before,#u5355-4:hover::before,#u5347-4:hover::before,#u5339-4:hover::before,#u5318-4:hover::before,#u5387-4:hover::before,#u5398-4:hover::before
 {
 	content: "";
 	position: absolute;
@@ -1141,7 +1179,7 @@
 	box-shadow: inset -10px 58px 99px rgba(255,255,255,0.75), inset 10px -58px 99px rgba(0,0,0,0.75);
 }
 
-#u5379-4:hover p,#u5371-4:hover p,#u5363-4:hover p,#u5355-4:hover p,#u5347-4:hover p,#u5339-4:hover p,#u5318-4:hover p,#u5387-4:hover p
+#u5379-4:hover p,#u5371-4:hover p,#u5363-4:hover p,#u5355-4:hover p,#u5347-4:hover p,#u5339-4:hover p,#u5318-4:hover p,#u5387-4:hover p,#u5398-4:hover p
 {
 	color: #FFFFFF;
 	visibility: inherit;
@@ -1149,7 +1187,7 @@
 	padding-top: 62px;
 }
 
-#u5347-2,#u5318-2,#u5387-2
+#u5347-2,#u5318-2,#u5387-2,#u5398-2
 {
 	padding-top: 62px;
 	visibility: hidden;/* 100% transparent text is hidden */
@@ -1161,8 +1199,8 @@
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	line-height: 30px;
 	color: #E792C4;
+	line-height: 30px;
 	text-align: center;
 	font-size: 25px;
 	font-family: bitter, serif;
@@ -1521,8 +1559,8 @@
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	line-height: 30px;
 	color: #E792C4;
+	line-height: 30px;
 	text-align: center;
 	font-size: 25px;
 	font-family: bitter, serif;
@@ -1615,8 +1653,8 @@
 	width: 245px;
 	min-height: 23px;
 	background-color: #FFFFFF;
-	line-height: 22px;
 	color: #9E9E9E;
+	line-height: 22px;
 	text-align: center;
 	font-size: 18px;
 	font-family: bitter, serif;
@@ -1631,8 +1669,8 @@
 	width: 782px;
 	min-height: 24px;
 	background-color: transparent;
-	line-height: 24px;
 	color: #000000;
+	line-height: 24px;
 	text-align: left;
 	font-size: 20px;
 	font-family: bitter, serif;
